--- a/front/accueil/accueilCentralContainer.css
+++ b/front/accueil/accueilCentralContainer.css
@@ -7,7 +7,7 @@
     grid-column-end: 9;
     padding: 5%;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-around;
 }
 
 /* base conteneur */
