--- a/front/accueil/accueilCentralContainer.css
+++ b/front/accueil/accueilCentralContainer.css
@@ -95,5 +95,20 @@
 }
 
 .travelList{
-    
+    background-color: rgba(158, 161, 152, 0.438);
+    width: 100%;
+    height: 40px;
+    border-radius: 5px;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    margin-bottom: 5px;
+}
+
+.book{
+    background-color: rgb(136, 202, 136);
+    width: 50;
+    border-radius: 3px;
+    padding: 7.5px;
+
 }
