--- a/front/accueil/accueilCentralContainer.css
+++ b/front/accueil/accueilCentralContainer.css
@@ -1,13 +1,27 @@
+*{
+
+    font-family : 'Noto Sans'
+}
+
+
 #containerTrains {
     background-color: rgba(136, 136, 136, 0);
-    display: flex;
-    grid-row-start: 4;
+    grid-row-start: 2;
     grid-row-end: 10;
     grid-column-start: 3;
     grid-column-end: 9;
     padding: 5%;
+    display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: space-around;
+}
+
+#littlecontainers{
+    display: flex ;
+    width: 100%;
+    justify-content: space-around;
+    align-items: space-around;
 }
 
 /* base conteneur */
@@ -84,16 +98,20 @@
     flex-direction: column;
     justify-content: space-around;
     overflow-y: auto;
+    justify-content: center;
+    align-items: center;
 
 }
 
 #imgTrajetFound{
     border-bottom: 2px solid rgb(5, 148, 0);
+    padding-bottom: 50px;
     margin-bottom: 2vh;
+    width: 60% ;
 }
 
 #txtFound{
-
+    text-align: center;
 }
 
 .travelList{
@@ -128,4 +146,8 @@ a{
 
 #subContenairTopBar a{
     color:black;
+}
+
+#title{
+    color: white;
 }
