--- a/front/cart/cartCentralContainer.css
+++ b/front/cart/cartCentralContainer.css
@@ -8,4 +8,17 @@
     justify-content: space-around;
     align-items: center;
     background-color: rgb(255, 255, 255);
+    padding: 10px;
+}
+
+
+.travelTopaid{
+    background-color: rgba(158, 161, 152, 0.438);
+    width: 100%;
+    height: 50px;
+    border-radius: 5px;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    margin-bottom: 10px;
 }
