--- a/front/accueil/accueilCentralContainer.css
+++ b/front/accueil/accueilCentralContainer.css
@@ -75,16 +75,21 @@
 }
 #btnSearch{
     text-align: center;
-    font-size: large;
-    font-weight: 800;
+    font-size: 12px;
+    font-weight: 600;
+
     color: rgb(255, 255, 255);
-    background-color: rgb(89, 146, 89);
+    background-color: #4FAB91;
     border-radius: 3px;
     height: 8vh;
     align-items: center;
     display: flex;
     justify-content: center;
 
+}
+
+#btnSearch:hover{
+    cursor: pointer;
 }
 
 
@@ -104,7 +109,7 @@
 }
 
 #imgTrajetFound{
-    border-bottom: 2px solid rgb(5, 148, 0);
+    border-bottom: 2px solid rgb(21, 133, 123);
     padding-bottom: 50px;
     margin-bottom: 2vh;
     width: 60% ;
@@ -126,7 +131,7 @@
 }
 
 .book{
-    background-color: rgb(136, 202, 136);
+    background-color: rgb(21, 133, 123);
     width: 50;
     border-radius: 3px;
     padding: 5px;
@@ -142,6 +147,8 @@ a{
 
 #txtTicketHack{
     font-size: 26px;
+    color: #4FAB91;
+    font-weight: 600;
 }
 
 #subContenairTopBar a{
@@ -150,4 +157,13 @@ a{
 
 #title{
     color: white;
+}
+h1{
+    margin-bottom: 20px;
+    font-weight: 400;
+}
+
+h4{
+    margin-bottom: 20px;
+    font-weight: 400;
 }
