--- a/front/cart/cartCentralContainer.css
+++ b/front/cart/cartCentralContainer.css
@@ -8,7 +8,6 @@
     justify-content: space-around;
     align-items: center;
     background-color: rgb(255, 255, 255);
-    padding: 10px;
 }
 
 
@@ -20,5 +19,35 @@
     display: flex;
     align-items: center;
     justify-content: space-around;
-    margin-bottom: 10px;
+
+}
+
+.supprimer {
+    background-color: rgb(117, 194, 158);
+    border-radius: 10px;
+    height: 30px;
+    width: 30px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: rgb(255, 255, 255);
+}
+
+#totalBuy{
+    background-color: blue;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    color: wheat;
+    width: 100%;
+    height: 50px;
+    border-radius: 0 0 10px 10px;
+}
+#total{
+
+
+}
+#purchase{
+
+
 }
