--- a/front/cart/cartCentralContainer.css
+++ b/front/cart/cartCentralContainer.css
@@ -19,6 +19,7 @@
     display: flex;
     align-items: center;
     justify-content: space-around;
+    margin-top: 10px;
 
 }
 
@@ -34,7 +35,7 @@
 }
 
 #totalBuy{
-    background-color: blue;
+    background-color: rgb(15, 15, 56);
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -42,12 +43,17 @@
     width: 100%;
     height: 50px;
     border-radius: 0 0 10px 10px;
+    margin-top: 20px;
 }
 #total{
-
+    margin: 10px;
+    color: aliceblue;
 
 }
 #purchase{
-
+    background-color: green;
+    border-radius: 5px;
+    margin: 10px;
+    padding: 5px;
 
 }
