--- a/front/booking/bookingCentralContainer.css
+++ b/front/booking/bookingCentralContainer.css
@@ -9,3 +9,13 @@
     align-items: center;
     background-color: rgb(255, 255, 255);
 }
+
+.travels {
+    background-color: rgb(197, 197, 196);
+    height: 40px;
+    width: 400px;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    border-radius: 10px;
+}
