--- a/front/cart/cartCentralContainer.css
+++ b/front/cart/cartCentralContainer.css
@@ -4,7 +4,9 @@
 
 
 
-
+#containerCart {
+    background-color: #e9ecef;
+}
 
 #centralContainer{
     grid-row-start: 5;
@@ -32,7 +34,7 @@
 }
 
 .supprimer {
-    background-color: rgb(117, 194, 158);
+    background-color: #4FAB91;
     border-radius: 10px;
     height: 30px;
     width: 30px;
@@ -40,6 +42,11 @@
     align-items: center;
     justify-content: center;
     color: rgb(255, 255, 255);
+}
+
+.supprimer:hover{
+cursor: pointer;
+
 }
 
 #totalBuy{
@@ -59,9 +66,18 @@
 
 }
 #purchase{
-    background-color: green;
+    background-color: #4FAB91;
+    width: 100px;
     border-radius: 5px;
     margin: 10px;
     padding: 5px;
+    color: white;
+    font-size: 15px;
 
+    text-align: center;
+
+}
+
+#purchase:hover{
+    cursor: pointer;
 }
