--- a/front/cart/cartCentralContainer.css
+++ b/front/cart/cartCentralContainer.css
@@ -17,7 +17,7 @@
     justify-content: space-around;
     align-items: center;
     background-color: rgb(255, 255, 255);
-    
+    border-radius: 10px;
     
     
 }
